fix macro name in _utest.h

--- a/test/utest/Makefile
+++ b/test/utest/Makefile
@@ -4,9 +4,12 @@ MODULE_NAME		:=		utest
 
 BUILD_DIR		:=		.
 ROOT_DIR		:=		../..
-INCLUDE_DIR		:=		$(ROOT_DIR)/include
+UTEST_DIR		:=		$(ROOT_DIR)/modules/$(MODULE_NAME)
 LIB_DIR			:=		$(ROOT_DIR)/build/lib
 CONFIG_DIR		:=		$(ROOT_DIR)/config
+INCLUDE_DIR		:=		$(UTEST_DIR)/include
+
+DEPS			:=		$(shell find $(INCLUDE_DIR) -name "*.h")
 
 include $(CONFIG_DIR)/config.mk
 
@@ -17,14 +20,14 @@ CC_FLAGS		+=		-O3 -std=c11
 CC_FLAGS		+=		-isystem $(INCLUDE_DIR)
 
 .DEFAULT_GOAL	:=		test
-.PHONY:			test, clean
+.PHONY:					test, clean
 
 test: main.out
 main.out: main.o $(LIB_DIR)/lib$(LIB_NAME).a
 	@$(CC) $<  -L$(LIB_DIR) -l$(LIB_NAME) -o $@
 
-%.o:%.c
-	@$(CC) $(CC_FLAGS) -c $< -o $@
+%.o: %.c $(DEPS)
+	@$(CC) $(CC_FLAGS) -c $< -o $@ 
 
 clean:
 	@rm -rf $(BUILD_DIR)/*.o $(BUILD_DIR)/*.out
